Creacion de Migrations

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "H_J_TrablasContext": "Server=(localdb)\\mssqllocaldb;Database=H_J_Trablas.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
